# teste-completo

./: .gitignore  Dockerfile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
tests/: test_routes.py
